    emulation is enabled on the Linux kernel command-line.
* x86 backend
  + Add support for new AMD CPUID leaf 0x80000026 for better detection
    of Core Complex and Die on Zen4 processors.
  + Improve Zhaoxin topology detection in the x86 backend.
* Tools
  + Add --children-of-pid to hwloc-ps to show a hierarchy of processes.
    Thanks to Antoine Morvan for the suggestion.
* Misc
  + lstopo may now configure the layout of memory object placed above,
    for instance with --children-order memory:above:vert.
  + Fix installation failures when configuring with --target,
    thanks to Clement Foyer for the patch.
  + Remove Netloc.


Version 2.9.2
-------------
* Don't forget L3i when defining filters for multiple levels of caches
  with hwloc_topology_set_cache/icache_types_filter().
* Fix object total_memory after hwloc_topology_insert_group_object().
* Fix the (non-yet) exporting in synthetic description for complex memory
  hierarchies with memory-side caches, etc.
* Fix some default size attributes when building synthetic topologies.
* Fix size units in hwloc-annotate.
* Improve bitmap reallocation error management in many functions.
* Documentation improvements:
  + Better document return values of functions.
  + Add "Error reporting" section (in hwloc.h and in the doxygen doc).
  + Add FAQ entry "What may I disable to make hwloc faster?"
  + Improve FAQ entries "Why is lstopo slow?" and
    "I only need ..., why should I use hwloc?"
  + Clarify how to deal with cpukinds in hwloc-calc and hwloc-bind
    manpages.


Version 2.9.1
-------------
* Don't forget to apply object type filters to "perflevel" caches detected
  on recent Mac OS X releases, thanks to Michel Lesoinne for the report.
* Fix a failed assertion in hwloc_topology_restrict() when some NUMA nodes
  are removed because of HWLOC_RESTRICT_FLAG_REMOVE_CPULESS but no PUs are.
  Thanks to Mark Grondona for reporting the issue.
* Mark HPE Cray Slingshot NICs with subtype "Slingshot".


Version 2.9.0