@@ -31,6 +31,7 @@ Version 2.10.0
 * Tools
   + Add --children-of-pid to hwloc-ps to show a hierarchy of processes.
     Thanks to Antoine Morvan for the suggestion.
+  + Add --misc-from to lstopo to add Misc objects described in a file.
 * Misc
   + lstopo may now configure the layout of memory object placed above,
     for instance with --children-order memory:above:vert.
